# oauth-service

./: .env.template  Dockerfile  README.md  docker-compose.local.yml  pyproject.toml
src/: main.py
src/api/: router.py
src/api/routes/: google.py  yandex.py
src/core/: constants.py  settings.py  templates.py
src/integrations/: base_api_client.py
src/integrations/google/: client.py  exceptions.py  schemas.py
src/integrations/yandex/: client.py  exceptions.py  schemas.py
src/static/html/: index.html
